--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <header>
             <h1>The Witty Wikipedia Viewer</h1>
             <p>Created by: Timothy Hoang (<a href="https://www.youtube.com/c/traveldev" target=_blank>travelDev</a>)</p>
-            <p>Technologies deployed: JavaScript, jQuery</p>
         </header><!--end header-->
     
         <section id="search">
@@ -18,10 +17,10 @@
                 <form id="search-input">
                     <input id="query" type="text" name="query" placeholder="Search..." required /> 
                 </form>
-                <button id="search-button">Search!</button>
             </div>
             
-            <div id="search-random">
+            <div id="buttons">
+                <button id="search-button">Search!</button>
                 <button id="random-article">Random Article</button>
             </div>
         </section><!--end #search-->    
