--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div id="buttons">
-                <button id="random-articles">Random Articles</button>
+                <button id="random-articles">I'm Feeling Lucky</button>
             </div>
         </section><!--end #search-->    
     
