Add dark theme and change font

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>The Witty Wikipedia Viewer by Timothy Hoang (travelDev)</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Francois+One|Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Playfair+Display" rel="stylesheet">
     <!-- Local Files -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
