--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The Witty Wikipedia Viewer by Timothy Hoang (travelDev)</title>
+    <title>The Witty Wikipedia Viewer by Timothy Hoang</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Playfair+Display" rel="stylesheet">
     <!-- Local Files -->
